--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PL Dev</title>
     <link rel="stylesheet" href="./index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <main>
@@ -49,4 +51,8 @@
         </section>
     </main>
 </body>
+<footer>
+    <p>© 2024 PL Dev. Todos os direitos reservados.</p>
+</footer>
+
 </html>
